statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: fil7er-nodejs-ping-pong-db-svc
  namespace: my-namespace
spec:
  selector:
    app: fil7er-nodejs-ping-pong-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
  namespace: my-namespace
spec:
  selector:
    matchLabels:
      app: fil7er-nodejs-ping-pong-db
  serviceName: fil7er-nodejs-ping-pong-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: fil7er-nodejs-ping-pong-db
    spec:
      containers:
      - name: fil7er-nodejs-ping-pong-db
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
          name: postgres-port
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
